style.css
/*applies to all screens*/
*{
    /** making things logical**/
    box-sizing: border-box;
    -moz-box-sizing:border-box ;
    -webkit-box-sizing: border-box;
    margin: 0px;
    padding: 0px;
}
header{
    box-shadow: #363636 1px 1px 5px;
}
header,main{
    overflow: hidden;
}
.logo-con img{
    max-width: 120px;
}
.nav-mobile-con *,.nav-desktop-con *,.nav-breadcamps-con *{
    list-style-type: none;
    text-decoration: none;
    color: black;
    cursor: pointer;
    font-size: 20px;
    font-weight: bold;
    font-family: Bahnschrift;
}
.nav-breadcamps-con li{
    display: inline-block;
    cursor: pointer;
    margin: 5px;
}
.nav-breadcamps-con .active{
    text-decoration: underline;
}
.nav-breadcamps-con{
    padding: 15px;
    border-top:1px solid rgba(0, 0, 0, 0.2);
}
.header-top-section {
    padding: 5px;
}
/* for text section*/
.text-section{
    padding: 5px;
    margin: 15px;
}
.text-description{
    font-size: 20px;
}
/*for products list on all screens*/
#products-list{
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
}
.video-item-con{
    font-family: Bahnschrift;
    margin: 5px;
    text-decoration: none;
    color: black;
    box-shadow: rgba(0, 0, 0, 0.56) 0px 0px 5px;
    background-color: #fdfdfd;
    border-radius: 10px;
    padding: 15px;
}
.video-item-con img{
    border-radius: 5px;
}
.video-item-con > *{
    display: block;
}
.product-title{
    margin: 15px 0px ;
    font-size: 22px;
}
.product-price-light,.product-price-bold,.product-saving{
    margin: 5px 0px;
    font-size: 15px;
}
.product-price-bold{

}
.product-price-light{

}
.product-saving{

    font-weight: bold;
    color:darkgreen;
}

/*for small screens*/
@media all and (max-width: 720px){

    .desktop-indice{
        display: none;
    }
    .mobile-indice{
        display:block;
    }
    .nav-desktop-con{
        display: none;
    }
    .header-top-section{
        display: grid;
    }
    .logo-con{
        grid-column-start: 1;
        grid-column-end: 6;
        display: inline-block;
    }
    .nav-mobile-con{
        display: inline-block;
        grid-column-start: 6;
        grid-column-end: 10;
    }
    .drop-down-container{
        position: absolute;
        display: inline-block;
        width: 100%;
        margin-right: 2vw;
    }
    .drop-down-container:hover .drop-down-content{
        display: block;
    }
    .drop-down-btn{
        width: 70%;
        margin-left: 20%;
    }
    .drop-down-btn img{
        border:solid 1px rgba(0, 0, 0, 0.87);
        border-radius: 5px;
        padding: 5px;
        width: 50px;
        height: 50px;
        margin-top:10px;
    }
    .drop-down-content{
        display: none;
        background-color: white;
        box-shadow: black 1px 1px 10px;
        border-radius: 5px;
        right: 20px;
    }
    .drop-down-content li{
        padding: 16px;
    }
    .drop-down-content li:hover{
        background-color: orange;
    }
    .text-description{
        width: 100%;
    }


}
/*for big screens*/
@media all and (min-width: 720px){
    .desktop-indice{
        display: block;
    }
    .mobile-indice{
        display:none;
    }
    .nav-desktop-con{
        display: inline-block;
    }
    .nav-mobile-con{
        display: none;
    }
    .header-top-section{
        display: flex;
        justify-content: space-between;
    }
    .nav-desktop-con li{
        display: inline-block;
        padding: 10px;
    }
    .nav-desktop-con{
        margin: auto 20px auto 0px;
    }
    .nav-desktop-con li:hover{
        background-color: orange;
        cursor: pointer;
    }
    .text-description{
        width: 50%;
    }

}

